<resources>
    <string name="app_name">phonebill-android</string>
    <string name="hello">Welcome to Phone Bill App!</string>
    <string name="help">Help</string>
    <string name="menu">Menu</string>
    <string name="pretty_print">Pretty Print</string>
    <string name="add_new_phone_call">Add new Phone Call</string>
    <string name="search_phone_calls">Search Phone Calls</string>
    <string name="create_new_phone_bill">Create New Phone Bill</string>
    <string name="enter_customer_name">Enter Customer Name</string>
    <string name="enter_caller_number">Enter Caller Number</string>
    <string name="enter_customername">Enter Customer name</string>
    <string name="caller_number">Enter Caller Number</string>
    <string name="enter_callee_number">Enter Callee Number</string>
    <string name="enter_begin_date">Enter begin date</string>
    <string name="enter_end_date">Enter end date</string>
    <string name="enter_end_time">Enter end time</string>
    <string name="enter_begin_time">Enter begin time</string>
    <string name="return_to_main">Return To Main</string>
    <string name="return_to_menu">Return to Menu</string>
    <string name="create">Create</string>
    <string name="enter_caller">Enter Caller Number</string>
    <string name="enter_name_to_search">Enter Name to Search</string>
    <string name="search">Search</string>
    <string name="add_new_call">Add New Call</string>
    <string name="createcall">Create</string>
    <string name="search_customer_by_name">Search Customer by Name</string>


</resources>